<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="top_title">My Nanodegree Apps!</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone:My own app</string>

</resources>
