<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.android.btdt.myappportfolio.MainActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_title"
        android:layout_gravity="center"
        android:onClick="displayToast"/>
        
    
    <Button
        android:id="@+id/spotify"
        android:text="@string/spotify_streamer"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:onClick="displayToast"
        />

    <Button
        android:id="@+id/scores"
        android:text="@string/scores_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="displayToast"/>

    <Button
        android:id="@+id/library"
        android:text="@string/library_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="displayToast"/>

    <Button
        android:id="@+id/build"
        android:text="@string/build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="displayToast"/>

    <Button
        android:id="@+id/bacon"
        android:text="@string/bacon_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="displayToast"/>

    <Button
        android:id="@+id/capstone"
        android:text="@string/capstone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_purple"
        android:layout_marginTop="10dp"
        android:onClick="displayToast"/>
</LinearLayout>
